@@ -1,4 +1,5 @@
 
+  - Added support for console groups using "group" and "groupEnd"
   - Added support for log, info, warn and error logging aliases
   - (Issue 29) problem with TRACE when using with error_handler
   - (Issue 33) PHP error notices running demos
